app/assets/stylesheets/cerberus.scss
@import 'colors';
@import 'bootstrap';

body {
  background-color: $gray-100;
  height:100vh;
  margin:0;
  display:flex;
  flex-direction:column;
}

#mods {
  font-size: calc(0.8rem + 0.1vw);
}

.well {
  background-color: #ecf0f1;
}

a:not(.btn, .dropdown-item, .navbar-brand, .nav-link) {
  color: $link-blue;

  &:link {
    text-decoration: none;
  }
}

.navbar-search {
  padding-bottom: 0;
}

.catalog_startOverLink {
  display: none;
}

.sort-pagination {
  padding-top: 8px;
}

.footer {
  background-color: #385775;
  color: $light;

  .logo {
    width: 175px;
  }

  a {
    color: $light;
  }

  li.list-inline-item:before {
    content: "\20\00b7";
    margin-right: 8px;
  }
  li.list-inline-item:first-child:before{
    content: "";
    margin-right: auto;
  }
  .nu-social{
    li{
      float: right;
      display: block;
      a {
        -webkit-transition: opacity 0.5s;
        -moz-transition: opacity 0.5s;
        -o-transition: opacity 0.5s;
        transition: opacity 0.5s;
        padding: 0.25em;
        font-size: 1.3em;
        opacity: 0.5;
      }
      a:hover {
        -webkit-transition: opacity 0.5s;
        -moz-transition: opacity 0.5s;
        -o-transition: opacity 0.5s;
        transition: opacity 0.5s;
        text-decoration: none;
        opacity: 1;
      }
    }
    li:after {
      content: "";
    }
  }
}

.search-widgets div:last-child {
  margin-right: 0 !important;
}

.breadcrumb-add {
  display: inline;
}

.dropdown-menu.show{
  background-color: $light;

  a:hover {
    &:not(.active) {
      background-color: $light;
      color: $cyan;
    }
  }

  a:active {
    color: $dark;
  }
}

.dropdown-item.active, .dropdown-item:active {
  background-color: $light;
  color: $dark;
  font-weight: bold;
}

.document-counter {
  display: none;
}

#editor {
  height: 952px;
}

.btn-close {
  color: transparent !important;
  @extend .float-end;
}

ol.breadcrumb {
  background-color: #f0f0f0;
  @extend .rounded-3;
  @extend .p-3;
}

.breadcrumb a {
  color: $gray-800;
}

.breadcrumb-item.active {
  font-weight: 600;
  color: $gray-800;
}

.nav-tabs {
  margin: 10px 0px 10px 0px;
}

.loading-state {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 9999;
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
}
.loading {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border: 10px solid #ddd;
  border-top-color: $blue;
  animation: loading 1s linear infinite;
}
@keyframes loading {
  to {
    transform: rotate(360deg);
  }
}

.navbar-search {
  margin-bottom: 5px;
}

/* Blacklight Gallery Title */
.gallery-title {
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Metadata section value line clamp */
.metadata-section-clamped {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  overflow: hidden;
}

.document-thumbnail {
  background-color: white;
  border: 1px solid rgba(0, 0, 0, 0.2);
  position: relative;
  overflow: hidden;
  flex-shrink: 0;
  width: 85px;
  height: 85px;
}

.col-md-auto .document-thumbnail {
  margin-top: 7px;
}

.document-thumbnail:has(.thumbnail-fallback:not(.d-none)) {
  background-color: transparent;
  border: none;
}

.thumbnail-fallback {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.document-thumbnail img {
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 100%;
  max-height: 100%;
  padding: 2px;
}

.documents-list .document-thumbnail {
  padding-left: 0;
  margin-right: 3rem;
}

.facet-limit .btn {
  @extend .px-3;
}

.work-show-divider {
  border: 0;
  border-top: 1px solid $gray-300;
  opacity: 1;
  margin-top: 0;
  margin-bottom: 0.5rem;
}

.documents-gallery {
  row-gap: var(--bs-gutter-x);

  .document-thumbnail {
    width: 170px;
    height: 170px;
    border: 1px solid rgba(0, 0, 0, 0.2);
  }

  .thumbnail-fallback svg {
    font-size: 4em;
  }

  .document-thumbnail:has(.thumbnail-fallback:not(.d-none)) {
    border: 1px solid rgba(0, 0, 0, 0.2);
  }
}

